--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crape-postcss-nested",
+  "name": "pluggable-postcss-nested",
   "version": "0.0.1-alpha1",
   "description": "",
   "main": "index.js",
